fix: readable font

--- a/code/templates/style.css
+++ b/code/templates/style.css
@@ -14,7 +14,7 @@ html {
 
 body {
   color: #444;
-  font-family: "Merriweather", "Cardo",Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif;
+  font-family: "Cardo", "Merriweather", Georgia, Palatino, serif;
   font-size: 12px;
   line-height: 1.7;
   padding: 1em;
